--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -327,21 +327,22 @@ $ninesixty-gutter-width: 20px; // default: 20px
 
 .company-image-box{
 	
-/*	position:relative;*/
+	position:relative;
 	background-color:#fff;
   margin-top:36px;
 	@include grid(6);
-	min-height:376px;
+	min-height:340px;
 	display:block;
 	overflow:hidden;
 
-	.borders{
-		border-style:solid;
-		border-width:1px;
-		min-height:376px;
-		display:block;
-		overflow:hidden;
-	}
+
+	border-style:solid;
+	border-width:1px;
+	width:458px;
+
+	text-align:right;
+	
+
 	
 	.company{
 		height:340px;
@@ -349,13 +350,16 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	/*	overflow:hidden; */
 	}
 	.info-box{
-		
-		min-height:40px;
+		position:absolute;
+		top:100px;
+		height:40px;
 		min-width:40px;
-/*		@include opacity(0.8);*/
+		@include opacity(0.8);
 		background-color:#ddd;
 		text-align:right;
 		padding:8px;
+		border-style:solid;
+		border-width:1px;
 	}
 /*
 	.tlf-box{
