--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -185,17 +185,16 @@ $ninesixty-gutter-width: 20px; // default: 20px
 }
 
 .menu-box{
-/*	background-image:url('/images/nav_left.png');*/
+	background-image:url('/images/nav_left.png');
 	background-repeat:no-repeat;
 	width:400px;
 	height:51px;
-/*	position:relative;
-	left:-14px;*/
+	position:relative;
+	left:-14px;
 	top:20px;
 	color:#fff;
 	.menu-back{
-		margin-left:0px;
-		margin-top:20px;
+		margin-left:14px;
 		background-color:#000;
 		height:30px;
 		padding-top:8px;
@@ -331,37 +330,25 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	background-color:#fff;
   margin-top:36px;
 	@include grid(6);
-	min-height:340px;
+	min-height:376px;
 	display:block;
 	overflow:hidden;
-
-
-	border-style:solid;
-	border-width:1px;
-	width:458px;
-
 	text-align:right;
-	
-
-	
-	.company{
-		height:340px;
-		display:block;
-	/*	overflow:hidden; */
-	}
-	.info-box{
-		position:absolute;
-		top:100px;
-		height:40px;
-		min-width:40px;
-		@include opacity(0.8);
-		background-color:#ddd;
-		text-align:right;
-		padding:8px;
+	.borders{
 		border-style:solid;
 		border-width:1px;
+		height:336px;
+		display:block;
+	/*	overflow:hidden;*/
 	}
-/*
+	.info{
+		border-style:solid;
+		border-width:1px;
+		height:38px;
+		display:block;
+		overflow:hidden;
+	}
+
 	.tlf-box{
 		@include opacity(0.8);
 		background-color:#ddd;
@@ -377,7 +364,6 @@ $ninesixty-gutter-width: 20px; // default: 20px
 			text-transform: uppercase;
 		}
 	}
-	*/
 }
 
 
@@ -390,6 +376,9 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	clear: both;
 	height: 100%;
 	left:0;
+
+	
+
 	@include grid(12);
 	background-color:#fff;
   margin-top:22px;
@@ -398,15 +387,15 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	width:940px;
 	display:block;
 	float:left;
-/*	position:relative;
-	clear: both;*/
+	position:relative;
+	clear: both;
 
 	.borders{
 		border-style:solid;
 		border-width:1px;
 		height:184px;
-/*		position:relative;
-		clear: both;*/
+		position:relative;
+		clear: both;
 
 	}
 	.left-side{
@@ -415,8 +404,8 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		@include grid(3);
 		@include alpha;
 		width:168px;
-/*		position:relative;
-		clear: both;*/
+		position:relative;
+		clear: both;
 		.menu-box{
 			width:154px;
 			height:51px;
