--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -334,7 +334,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	display:block;
 	overflow:hidden;
 	text-align:right;
-	.borders{
+	.com-borders{
 		border-style:solid;
 		border-width:1px;
 		height:336px;
