--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -29,9 +29,13 @@
   
         
   .company-image-box
-    .borders
+    .com-borders
       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
     .info
+      'T: 
+      = @company.phone 
+      '&nbsp;|&nbsp;
+      =raw @link
 .grid-container     
   = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
