--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -10,7 +10,7 @@
         - if @company.body.length > 800
           =raw excerpt(@company.body, '', :radius => 800)
           '&nbsp;
-          = link_to 'lÃ¦s mere', show_all_company_path(@company)
+          = link_to 'læs mere', show_all_company_path(@company)
         - else
           =raw @company.body
             
@@ -29,14 +29,15 @@
   
         
   .company-image-box
-    .com-borders
-      = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-    .info
-      'T: 
-      = @company.phone 
-      '&nbsp;|&nbsp;
-      =raw @link
-.grid-container     
+    .borders
+      .company-height
+        = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
+      .info
+        'lasjkdf
+      
+.grid-container
+
+   
   = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
