--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -35,7 +35,10 @@
       .info
         = @company.phone 
         '&nbsp;|&nbsp;
-        = @link
+        = link_to @company.homepage, 'http://'+@company.homepage
+
+        
+        /= @link
       
 .grid-container
 
