--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -629,7 +629,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 460px;
   min-height: 376px;
   display: block;
-  overflow: hidden;
+  /*	overflow:hidden;*/
 }
 /* line 302, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .borders {
@@ -637,7 +637,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   border-width: 1px;
   min-height: 376px;
   display: block;
-  overflow: hidden;
+  /*	overflow:hidden;*/
 }
 /* line 310, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .content .content-top {
@@ -684,8 +684,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* line 337, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .info {
   padding: 11px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+  background-color: #ddd;
 }
-/* line 341, ../../../app/assets/stylesheets/grid.scss */
+/* line 343, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .tlf-box {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   opacity: 0.8;
@@ -698,25 +701,25 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   right: 0;
   padding: 8px;
 }
-/* line 351, ../../../app/assets/stylesheets/grid.scss */
+/* line 353, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .tlf-box a {
   color: #000;
   text-transform: uppercase;
 }
 
-/* line 360, ../../../app/assets/stylesheets/grid.scss */
+/* line 362, ../../../app/assets/stylesheets/grid.scss */
 .fixed-height {
   height: 376px;
 }
 
-/* line 364, ../../../app/assets/stylesheets/grid.scss */
+/* line 366, ../../../app/assets/stylesheets/grid.scss */
 .company-height {
   height: 336px;
-  overflow: hidden;
+  /*	overflow:hidden;*/
   display: block;
 }
 
-/* line 370, ../../../app/assets/stylesheets/grid.scss */
+/* line 372, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box {
   clear: both;
   height: 100%;
@@ -736,7 +739,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   position: relative;
   clear: both;
 }
-/* line 388, ../../../app/assets/stylesheets/grid.scss */
+/* line 390, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
@@ -744,7 +747,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   position: relative;
   clear: both;
 }
-/* line 396, ../../../app/assets/stylesheets/grid.scss */
+/* line 398, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -757,21 +760,21 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   position: relative;
   clear: both;
 }
-/* line 404, ../../../app/assets/stylesheets/grid.scss */
+/* line 406, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 407, ../../../app/assets/stylesheets/grid.scss */
+/* line 409, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 408, ../../../app/assets/stylesheets/grid.scss */
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 411, ../../../app/assets/stylesheets/grid.scss */
+/* line 413, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -782,12 +785,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-right: 0;
   width: 730px;
 }
-/* line 417, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 421, ../../../app/assets/stylesheets/grid.scss */
+/* line 423, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -797,7 +800,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 220px;
   width: 230px;
 }
-/* line 427, ../../../app/assets/stylesheets/grid.scss */
+/* line 429, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -810,17 +813,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-right: 0;
   width: 230px;
 }
-/* line 434, ../../../app/assets/stylesheets/grid.scss */
+/* line 436, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   color: #000;
 }
-/* line 437, ../../../app/assets/stylesheets/grid.scss */
+/* line 439, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 444, ../../../app/assets/stylesheets/grid.scss */
+/* line 446, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -834,49 +837,49 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 230px;
   font-weight: bold;
 }
-/* line 453, ../../../app/assets/stylesheets/grid.scss */
+/* line 455, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   color: #448;
 }
-/* line 456, ../../../app/assets/stylesheets/grid.scss */
+/* line 458, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 460, ../../../app/assets/stylesheets/grid.scss */
+/* line 462, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 465, ../../../app/assets/stylesheets/grid.scss */
+/* line 467, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 468, ../../../app/assets/stylesheets/grid.scss */
+/* line 470, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 477, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 479, ../../../app/assets/stylesheets/grid.scss */
+/* line 481, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 481, ../../../app/assets/stylesheets/grid.scss */
+/* line 483, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 486, ../../../app/assets/stylesheets/grid.scss */
+/* line 488, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -886,7 +889,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-left: 0;
 }
 
-/* line 491, ../../../app/assets/stylesheets/grid.scss */
+/* line 493, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -897,19 +900,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   padding-right: 480px;
 }
 
-/* line 498, ../../../app/assets/stylesheets/grid.scss */
+/* line 500, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 503, ../../../app/assets/stylesheets/grid.scss */
+/* line 505, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 508, ../../../app/assets/stylesheets/grid.scss */
+/* line 510, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -920,29 +923,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 513, ../../../app/assets/stylesheets/grid.scss */
+/* line 515, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 519, ../../../app/assets/stylesheets/grid.scss */
+/* line 521, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 522, ../../../app/assets/stylesheets/grid.scss */
+/* line 524, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 523, ../../../app/assets/stylesheets/grid.scss */
+/* line 525, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 527, ../../../app/assets/stylesheets/grid.scss */
+/* line 529, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -955,14 +958,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 535, ../../../app/assets/stylesheets/grid.scss */
+/* line 537, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 542, ../../../app/assets/stylesheets/grid.scss */
+/* line 544, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -972,7 +975,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 551, ../../../app/assets/stylesheets/grid.scss */
+/* line 553, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -983,7 +986,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 562, ../../../app/assets/stylesheets/grid.scss */
+/* line 564, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -992,7 +995,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 568, ../../../app/assets/stylesheets/grid.scss */
+/* line 570, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -1003,21 +1006,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 574, ../../../app/assets/stylesheets/grid.scss */
+/* line 576, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 583, ../../../app/assets/stylesheets/grid.scss */
+/* line 585, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 589, ../../../app/assets/stylesheets/grid.scss */
+/* line 591, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1027,7 +1030,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 593, ../../../app/assets/stylesheets/grid.scss */
+/* line 595, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1036,7 +1039,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 597, ../../../app/assets/stylesheets/grid.scss */
+/* line 599, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1044,7 +1047,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 600, ../../../app/assets/stylesheets/grid.scss */
+/* line 602, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1052,7 +1055,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 603, ../../../app/assets/stylesheets/grid.scss */
+/* line 605, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1060,7 +1063,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 606, ../../../app/assets/stylesheets/grid.scss */
+/* line 608, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1071,19 +1074,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 613, ../../../app/assets/stylesheets/grid.scss */
+/* line 615, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 619, ../../../app/assets/stylesheets/grid.scss */
+/* line 621, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 621, ../../../app/assets/stylesheets/grid.scss */
+/* line 623, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1095,41 +1098,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 627, ../../../app/assets/stylesheets/grid.scss */
+/* line 629, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 634, ../../../app/assets/stylesheets/grid.scss */
+/* line 636, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 636, ../../../app/assets/stylesheets/grid.scss */
+/* line 638, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 641, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 642, ../../../app/assets/stylesheets/grid.scss */
+/* line 644, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 643, ../../../app/assets/stylesheets/grid.scss */
+/* line 645, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 645, ../../../app/assets/stylesheets/grid.scss */
+/* line 647, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 650, ../../../app/assets/stylesheets/grid.scss */
+/* line 652, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1141,55 +1144,55 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 656, ../../../app/assets/stylesheets/grid.scss */
+/* line 658, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 663, ../../../app/assets/stylesheets/grid.scss */
+/* line 665, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 665, ../../../app/assets/stylesheets/grid.scss */
+/* line 667, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 668, ../../../app/assets/stylesheets/grid.scss */
+/* line 670, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 671, ../../../app/assets/stylesheets/grid.scss */
+/* line 673, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 672, ../../../app/assets/stylesheets/grid.scss */
+/* line 674, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 674, ../../../app/assets/stylesheets/grid.scss */
+/* line 676, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
 
 /* full clearfix */
 /* add to floating elements which shall clear floating after themselves */
-/* line 682, ../../../app/assets/stylesheets/grid.scss */
+/* line 684, ../../../app/assets/stylesheets/grid.scss */
 * html .clearfix {
   height: 1%;
   /* IE5-6 */
 }
 
-/* line 685, ../../../app/assets/stylesheets/grid.scss */
+/* line 687, ../../../app/assets/stylesheets/grid.scss */
 * + html .clearfix {
   display: inline-block;
   /* IE7not8 */
 }
 
-/* line 688, ../../../app/assets/stylesheets/grid.scss */
+/* line 690, ../../../app/assets/stylesheets/grid.scss */
 .clearfix:after {
   /* FF, IE8, O, S, etc. */
   content: ".";
