--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,12 +2,29 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require galleriffic-3
- *= require gallery
- *= require fullcalendar
- *= require grid
- *= require main
- *= require text
- *= require_self
- *= require_tree .
+ *=  require galleriffic-3
+ *=  require gallery
+ *=  require fullcalendar
+ *=  require grid
+ *=  require main
+ *=  require text
+ *  require_self
+ *= require jquery.ui.core
+ *= require jquery.ui.theme
+ *= require dataTables/src/demo_table_jui
+ *  require_tree .
+*/
+
+/*
+.admin-box{
+  a {
+    text-decoration: none;
+    color: #444;
+  }
+  a:hover{ 
+    color:#fff; 
+    background-color:#000; 
+    }
+
+}
 */
