--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -1,3 +1,4 @@
+
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
@@ -11,11 +12,11 @@ pre {
   padding: 10px;
   font-size: 11px;
 }
-
+/*
 a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
-
+*/
 div.field, div.actions {
   margin-bottom: 10px;
 }
