--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -9,19 +9,21 @@
           -if can_edit?
             h1
               = t('admin.administration')
-            ul
-              li = link_to t('admin.users'), users_path
-              li = link_to 'email alle i huset', "mailto:#{User.all.map(&:email).join(', ')}", :confirm => t('admin.are_you_sure')
-              - if is_super?
-                li = link_to t('admin.illustrations'), illustrations_path
-                li = link_to t('admin.pages'), pages_path
-              li = link_to 'nyheder' , newsposts_path
-              li = link_to 'mødelokaler' , meetingrooms_path
-              li = link_to 'virksomheder' , companies_path
-              li = link_to "reservationer" , bookings_path
-              li = link_to "sider" , info_pages_path
-              li = link_to "gallerier" , galleries_path
-              li = link_to "photos" , photos_path 
+            .admin-box
+              ul
+                li = link_to t('admin.users'), users_path
+                /li = link_to 'email alle i huset', "mailto:#{User.all.map(&:email).join(', ')}", :confirm => t('admin.are_you_sure')
+                li=link_to 'udsend emails', mail_all_index_path
+                - if is_super?
+                  li = link_to t('admin.illustrations'), illustrations_path
+                  li = link_to t('admin.pages'), pages_path
+                li = link_to 'nyheder' , newsposts_path
+                li = link_to 'mødelokaler' , meetingrooms_path
+                li = link_to 'virksomheder' , companies_path
+                li = link_to "reservationer" , bookings_path
+                li = link_to "sider" , info_pages_path
+                li = link_to "gallerier" , galleries_path
+                li = link_to "photos" , photos_path 
           -else
             'no access
   .squared-box
