--- a/app/assets/stylesheets/jquery.Jcrop.css
+++ b/app/assets/stylesheets/jquery.Jcrop.css
@@ -6,6 +6,15 @@
 	font-size: 0;
 	position: absolute;
 	background: white url('Jcrop.gif') top left repeat;
+	
+	
+	
+	padding: 0px;
+  background-color: whiteSmoke;
+  border: 1px solid #CCC;
+  
+  
+  
 }
 .jcrop-vline { height: 100%; width: 1px !important; }
 .jcrop-hline { width: 100%; height: 1px !important; }
@@ -13,7 +22,7 @@
 	font-size: 1px;
 	width: 7px !important;
 	height: 7px !important;
-	border: 1px #eee solid;
+	border: 0px #eee solid;
 	background-color: #333;
 	*width: 9px;
 	*height: 9px;
