--- a/app/views/newsposts/crop.html.slim
+++ b/app/views/newsposts/crop.html.slim
@@ -1,6 +1,6 @@
 - content_for(:head) do
-  = stylesheet_link_tag "jquery.Jcrop"
-  = javascript_include_tag "jquery.Jcrop.min"
+  /= stylesheet_link_tag "jquery.Jcrop"
+  /= javascript_include_tag "jquery.Jcrop.min"
   javascript:
     $(function() {
       $('#cropbox').Jcrop({
